# fsi-compliance-agent

./: .cursorrules  .env.example  .gitignore  ACCEPTANCE.md  ASSUMPTIONS.md  CODEBASE.md  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: LINKEDIN.md  architecture.md  examiner_notes.md  rulebook_design.md
evals/: __init__.py  cases.jsonl  holdout.jsonl  judge.py  run_eval.py
scripts/: __init__.py  build_index.py  calibrate.py  review.py
src/compliance_agent/: __init__.py  config.py  graph.py  providers.py  sanctions.py  slack.py  state.py
src/compliance_agent/api/: __init__.py  server.py
src/compliance_agent/audit/: __init__.py  log.py  recorder.py  report.py
src/compliance_agent/nodes/: __init__.py  abstain.py  approval_gate.py  close.py  determination.py  exceptions.py  rule_retrieval.py  sanctions_screening.py  triage.py
src/compliance_agent/rulebook/: __init__.py  indexer.py  rules.jsonl  watchlist.jsonl
tests/: conftest.py  test_abstain.py  test_api.py  test_approval_gate.py  test_audit.py  test_config.py  test_determination.py  test_graph.py  test_holdout.py  test_providers.py  test_report.py  test_retrieval.py  test_sanctions.py  test_slack.py  test_triage.py
